--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sen:wght@700&display=swap');
 
 body{
   /* width: 100%;
@@ -15,14 +16,18 @@ body{
 }
 input {
   padding: 8px;
-  font-size: 14px;
+  font-size: 20px;
+  padding-right: 50%;
 }
-
+#logo{
+  width: 5%;
+  padding-bottom: 5px;
+}
 button {
   cursor: pointer;
   padding: 10px 16px;
   margin-left: 12px;
-  font-size: 14px;
+  font-size: 20px;
   background: lightgreen;
   outline: none;
   border-color: transparent;
@@ -34,27 +39,35 @@ button:hover {
   color: lightgreen;
 }
 #search{
-  padding-bottom:20px;
+  padding-bottom:5px;
+  
 }
 
 .results {
   margin-top: 5%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 10%;
-  row-gap: 2.5%;
+  column-gap: 8%;
+  row-gap: 1.5%;
 }
+h1{
+  margin-bottom: 10px;
+  font-family: 'Sen', sans-serif;
 
+}
 img{
   width:100%;
 }
 
 h2{
   padding-top: 10px;
-  font-size: 30px;
+  font-size: 20px;
+  font-family: 'Sen', sans-serif;
+
+  
 }
 h3{
-  font-size: 20px;
+  font-size: 15px;
   opacity: 0.6;
 }
 .album-item{
